--- a/crop_row_follower/package.xml
+++ b/crop_row_follower/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="allanbrandon34@gmail.com">brandon</maintainer>
   <license>TODO: License declaration</license>
 
+  <depend>rclpy</depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
