--- a/diffdrive_robot_hardware/CMakeLists.txt
+++ b/diffdrive_robot_hardware/CMakeLists.txt
@@ -6,34 +6,57 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # find dependencies
+set(THIS_PACKAGE_INCLUDE_DEPENDS
+  hardware_interface
+  pluginlib
+  rclcpp
+  rclcpp_lifecycle
+)
+
+# find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(hardware_interface REQUIRED)
-find_package(pluginlib REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
+foreach(Dependency IN ITEMS ${THIS_PACKAGE_INCLUDE_DEPENDS})
+  find_package(${Dependency} REQUIRED)
+endforeach()
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
 add_library(
-  ${PROJECT_NAME}
+  diffdrive_robot_hardware
   SHARED
   diff_drive_robot.cpp
 )
 
-target_include_directories(
-  ${PROJECT_NAME}
-  PRIVATE
-  include
+target_compile_features(diffdrive_robot_hardware PUBLIC cxx_std_17)
+target_include_directories(diffdrive_robot_hardware PUBLIC
+$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+$<INSTALL_INTERFACE:include/diffdrive_robot_hardware>
+)
+ament_target_dependencies(
+  diffdrive_robot_hardware PUBLIC
+  ${THIS_PACKAGE_INCLUDE_DEPENDS}
 )
 
-ament_target_dependencies(
-  ${PROJECT_NAME}
-  hardware_interface
-  pluginlib
-  rclcpp
-  rclcpp_lifecycle
+target_link_libraries(diffdrive_robot_hardware PUBLIC serial)
 
+# Causes the visibility macros to use dllexport rather than dllimport,
+# which is appropriate when building the dll but not consuming it.
+target_compile_definitions(${PROJECT_NAME} PRIVATE "DIFFDRIVE_ROBOT_BUILDING_DLL")
+
+# Export hardware plugins
+pluginlib_export_plugin_description_file(hardware_interface diffdrive_robot_hardware.xml)
+
+install(
+  DIRECTORY include
+  DESTINATION include/diffdrive_robot_hardware
+)
+
+install(TARGETS diffdrive_robot_hardware
+  EXPORT export_diffdrive_robot_hardware
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 
 if(BUILD_TESTING)
@@ -48,4 +71,6 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+ament_export_targets(export_diffdrive_robot_hardware HAS_LIBRARY_TARGET)
+ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
 ament_package()
