--- a/diffdrive_robot_hardware/package.xml
+++ b/diffdrive_robot_hardware/package.xml
@@ -9,8 +9,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>libserial-dev</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
