--- a/diffdrive_robot_hardware/package.xml
+++ b/diffdrive_robot_hardware/package.xml
@@ -15,6 +15,13 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>libserial-dev</depend>
 
+  <exec_depend>ros2_controllers_test_nodes</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>diff_drive_controller</exec_depend>
+  <exec_depend>ros2controlcli</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
