--- a/weeding_robot/config/controller.yaml
+++ b/weeding_robot/config/controller.yaml
@@ -1,24 +1,32 @@
 controller_manager:
   ros__parameters:
-    update_rate: 30
+    update_rate: 10
     # use_sim_time: true
     
-    diffbot_base_controller:
-      type: diff_drive_controller/DiffDriveController
-
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-diffbot_base_controller:
+    diff_drive_controller:
+      type: diff_drive_controller/DiffDriveController
+
+
+diff_drive_controller:
   ros__parameters:
 
     publish_rate: 50.0
-
+    odom_frame_id: odom
     base_frame_id: base_link
 
     left_wheel_names: ['Left_wheel_joint']
     right_wheel_names: ['Right_wheel_joint']
+
     wheel_separation: 0.9
     wheel_radius: 0.126
 
+    open_loop: true
+    enable_odom_tf: true
+    pose_covariance_diagonal : [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+
+    cmd_vel_timeout: 0.5
     use_stamped_vel: false
